# DOOMERCAT

./: .mailmap  Dockerfile  MANIFEST.in  README.md  build-help.py  check-version.py  compile.py  fibonacci_lattice.py  generate-plugin.sh  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: plugin.yml  pythonpackage.yml  testbuild.yml
cpp/include/: adam.hpp  arithmetic.hpp  autodouble.hpp  bfgs.hpp  bfgs2.hpp  constants.hpp  cost.hpp  cost_hotine.hpp  ctypesinterface.hpp  dataset.hpp  exitcode.hpp  functions.hpp  hotine.hpp  labordecylinder.hpp  linalg.hpp  optimize.hpp  parameters.hpp  projecteddata.hpp  quaternion.hpp  sum.hpp  truong2020.hpp  types.hpp  welzl.hpp
cpp/src/: arithmetic.cpp  cost.cpp  cost_hotine.cpp  ctypesinterface.cpp  dataset.cpp  functions.cpp  hotine.cpp  labordecylinder.cpp  linalg.cpp  optimize.cpp  projecteddata.cpp  welzl.cpp
cpp/testing/: makefile  test_ctypes.py
doc/: conf.py  index.rst
doc/api/: hom.rst
doc/usage/: installation.rst
doomercat/: __init__.py  _typing.py  config.py  cppextensions.py  defs.py  enclosingsphere.py  euclid.py  fibonacci.py  fisherbingham.py  geometry.py  hom.py  hotine.py  hotineproject.py  initial.py  laborde.py  lom.py  lombase.py  lomerror.py  messages.py  optimize.py  quaternion.py  shapefile.py
qgis-plugin/: README.md  __init__.py  dialogs.py  doomercatplugin.py  graph.py  help.md  messages.py  metadata.txt  moduleloader.py  pointvalidator.py  process.py  qgisproject.py  resources.qrc  wkt.py  worker.py
subprojects/: boost-subset.wrap  boost.wrap
subprojects/packagefiles/: boost-subset.tar.xz
testing/: test_cpp_scale_factor.py  test_examples.py  test_import.py  test_lom_api.py  test_lom_projection.py  test_optimize.py
testing/data/: small-circle-australia.geojson  small-circle-australia.txt
testing/data/chile/: Chile-cities-select.geojson  README.txt
testing/data/validation/: k-cpp-validation-data.csv
