[build-system]
requires = ["setuptools", "setuptools-scm","meson"]
build-backend = "setuptools.build_meta"

[project]
name = "doomercat"
version = "1.0.0"
authors = [
    {name = "Malte J. Ziebarth", email = "mjz.science@fmvkb.de"},
    {name = "Sebastian von Specht", email = "s.von.specht@protonmail.com"}
]
description = "Data-Optimized Oblique MERCATor"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["map projection", "optimization", "cartography"]
license = {text = "EUPL-1.2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy"
]

[tool.setuptools]
packages = ["doomercat"]

[tool.setuptools.package-data]
doomercat = ["doomercat/_cppextensions.dll", "doomercat/_cppextensions.so"]